# lambdac

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  backend.cabal  bigmerge-bench.lamc  boxed_adder.c  cabal.project.local  compiling-to-c.md  either.txt  evenodd.txt  fact.c  factorial.txt  lambdac.cabal  ltamer-20091106.tgz  rts.c  rts.h  test_suite.py
app/: Main.hs
docs/: README.md  arity.txt  closure_variants.txt  code_pointer.txt  data_types.txt  defunctionalize.txt  delimcont.txt  existential_values.txt  extensional-cps.txt  flow-analysis.txt  hkt_info.txt  hoist.txt  info_tables.txt  io_monad.txt  lazy_values.txt  monomorphise.txt  notes.md  notes2.txt  prim_booleans.txt  records.txt  size-polymorphism.txt  static-closures.txt  termination.txt  unbox_factorial.lamc  uncurrying.txt
examples/: adder.lamc  adder.txt  anon_fn.lamc  bimap.lamc  common_subexpr.lamc  curried.lamc  either.lamc  env_param.lamc  evenodd.lamc  fact.lamc  fibonacci.lamc  first_class_function.lamc  iftest.lamc  map.lamc  next_square.lamc  next_square.txt  shadowed_outer.lamc  shadowed_param.lamc  state_sum.lamc  sum_types.lamc  tailfact.lamc  tailfib.lamc  thunk_types.lamc  trisum.lamc  type_error.lamc
ltamer/: .hg_archival.txt  .hgignore  Makefile
ltamer/examples/: Makefile  Makefile.example
ltamer/examples/Compose/: CPS.v  CPSify.v  CPSifyCorrect.v  CPSifySpec.v  CPSifySpecS.v  CPSifyTail.v  CPSifyTailCorrect.v  Core.v  Ident.v  Link.v  LinkS.v  Makefile  Result.v  Swap.v  SwapPre.v
ltamer/examples/POPLmark/: Makefile  PHOAS1A.v
ltamer/examples/PatMatch/: Elab.v  Elabify.v  Examples.v  Makefile  Source.v
ltamer/examples/STLC/: CC.v  CCify.v  CPS.v  CPSify.v  Compile.v  Examples.v  Makefile  Source.v
ltamer/examples/STLCPlus/: CPS.v  CPSify.v  Makefile  Source.v
ltamer/examples/SysF/: CPS.v  CPSify.v  Examples.v  Makefile  Source.v
ltamer/examples/Untyped/: Asm.v  Base.v  CC.v  CCCorrect.v  CCWf.v  CPS.v  CPSify.v  CPSifyCorrect.v  CPSifyWf.v  CSE.v  CSECorrect.v  CSEWf.v  Closed.v  Codegen.v  CodegenCorrect.v  Compiler.v  CompilerCorrect.v  Core.v  Examples.v  Flat.v  Flatten.v  FlattenCorrect.v  Makefile  PHOASify.v  PHOASifyCorrect.v  PHOASifyWf.v  RegAlloc.v  RegAllocCorrect.v  Source.v
ltamer/src/coq/: Axioms.v  Binding.v  DepList.v  LambdaTamer.v  Makefile  NatMap.v  Scratchpad.v  Tactics.v  Util.v
rts/: alloc.c  alloc.h  control.c  control.h  main.c  panic.c  panic.h  prim.c  prim.h  record.c  record.h  rts.h  simple_record.c  simple_record.h  string.c  string.h  string_buf.c  string_buf.h
src/: CC.hs  CC2.hs  CPS.hs  Emit.hs  F.hs  Hoist.hs  Lexer.x  Lexer2.x  Loc.hs  Lower.hs  Lower2.hs  Opt.hs  Parser.y  Resolve.hs  Runtime.hs  STLC.hs  Source.hs  TypeCheck.hs  Util.hs
src/Backend/: Emit.hs  IR.hs  Lower.hs
src/CC/: IR.hs  TypeCheck.hs
src/CPS/: IR.hs  OneShot.hs  Opt.hs  Simpl.hs  TypeCheck.hs  Uncurry.hs  UnusedParams.hs
src/Core/: IR.hs  TypeCheck.hs
src/Experiments/: CPS2.hs  CPS3.hs  Elaborate.hs  F.hs  Inference.hs  Inline.hs  KCC.hs  Monomorphise.hs  Record.hs  Runtime.hs  STLC.hs
src/Hoist/: IR.hs  TypeCheck.hs
src/Source/: IR.hs  TypeCheck.hs
tests/: adder.lamc  bimap.lamc  bind_pure.lamc  bind_pure.stdout  case.lamc  charliteral.lamc  datacase.lamc  datactor.lamc  datadecl.lamc  datapair.lamc  duparg.lamc  echo.lamc  echo.stdin  echo.stdout  either.lamc  escapechar.lamc  evenodd.lamc  fact.lamc  fibonacci.lamc  fieldprec.lamc  foldr.lamc  hash.lamc  hello.lamc  hello.stdout  hkpoly.lamc  if.lamc  impred_inst.lamc  letrec.lamc  listcase.lamc  listctors.lamc  listmerge.lamc  listsum.lamc  mergesort.lamc  monolist.lamc  polyapp.lamc  polycase.lamc  polydata.lamc  polyid.lamc  polystate.lamc  precedence.lamc  (+18 more)
