cabal-version:      3.0
-- TODO: Rename to lambdac
name:               backend
version:            0.1.0.0
synopsis:           Experiments with compiler backends for functional languages
license:            BSD-3-Clause
license-file:       LICENSE
author:             Robert J Nagel
maintainer:         rjnagel64@gmail.com

category:           Language
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
    build-depends:
        base ^>=4.14.3.0
      , containers ^>=0.6.5.1
      , mtl ^>=2.2.2
      , array ^>=0.5.4.0
    build-tool-depends:
        alex:alex ^>=3.2
      , happy:happy ^>=1.19
    exposed-modules:
      Experiments.STLC
      Experiments.Runtime
      -- Experiments.F
      Lexer
      Loc
      Parser
      Source
      CPS
      Opt
      CC
      Hoist
      Emit

executable backend
    hs-source-dirs: app
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        base ^>=4.14.3.0
      , backend

