cabal-version:      3.6
name:               lambdac
version:            0.1.0.0
synopsis:           Experiments with compiler backends for functional languages
license:            BSD-3-Clause
license-file:       LICENSE
author:             Robert J Nagel
maintainer:         rjnagel64@gmail.com

category:           Language
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
    build-depends:
        base ^>=4.17.0.0
      , containers ^>=0.6.5.1
      , mtl ^>=2.2.2
      , array ^>=0.5.4.0
      , srcloc ^>=0.6.0.1
      , dlist ^>=1.0
    build-tool-depends:
        alex:alex ^>=3.2
      , happy:happy ^>=1.19
    exposed-modules:
      Experiments.STLC
      Experiments.Runtime
      -- Experiments.F
      -- Experiments.Monomorphise
      Experiments.Inference
      Lexer
      Parser
      Resolve
      Core.IR
      Core.TypeCheck
      CPS
      CPS.IR
      CPS.Opt
      CPS.Simpl
      CPS.TypeCheck
      CC.IR
      CC.TypeCheck
      CC
      Hoist
      Hoist.IR
      Hoist.TypeCheck
      Backend.Lower
      Backend.Emit
    default-extensions:
      LambdaCase
      StandaloneDeriving
      GeneralizedNewtypeDeriving
      DerivingVia
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleInstances
      FlexibleContexts
      MultiParamTypeClasses
    ghc-options: -O2

executable lambdac
    hs-source-dirs: app
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        base ^>=4.17.0.0
      , lambdac
      , optparse-applicative ^>=0.17.0
      , typed-process ^>=0.2.8.0
      , filepath ^>=1.4.2.2
    ghc-options: -O2

-- To build this properly, enable profiling options in cabal.project.local
executable lambdac-prof
    hs-source-dirs: app
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        base ^>=4.17.0.0
      , lambdac
      , optparse-applicative ^>=0.17.0
      , typed-process ^>=0.2.8.0
      , filepath ^>=1.4.2.2
    ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N -p -s -hT -i0.1"
